testconveyor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      run: ngx
  template:
    metadata:
      labels:
        run: ngx
    spec:
      containers:
      - image: harbor.k8s.maimaiti.site/library/tomcat:8-jre8-alpine
        # 可另外挂载空白卷追踪自定义日志文件
        volumeMounts:
         - mountPath: /usr/local/tomcat/logs
           name: tomcat-log
        name: ngx
      volumes:
      - emptyDir: {}
        name: tomcat-log
