testhealth.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: liveness
  name: liveness-exec
spec:
  containers:
  - name: liveness
    image: harbor.k8s.maimaiti.site/library/nginx:alpine
    # args:
    # - /bin/sh
    # - -c
    # - touch /tmp/healthy; sleep 20; rm -rf /tmp/healthy; sleep 600
    livenessProbe:
    # readinessProbe:
      # exec:
        # command:
        # - cat
        # - /tmp/healthy
      # httpGet:
        # path: /
        # port: 80
      tcpSocket:
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
