tmp-bak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    appId: devops-front-global
    deployment.kubernetes.io/revision: "2"
    stamp: fa17eaca-ffbe-4a4b-aa99-4427a4fc023c
  creationTimestamp: "2020-09-04T02:54:26Z"
  generation: 2
  labels:
    deepexi-app: devops-front-global
  name: devops-front-global
  namespace: dev-devops-test3
  resourceVersion: "11412252"
  selfLink: /apis/apps/v1/namespaces/dev-devops-test3/deployments/devops-front-global
  uid: 3d83768a-5514-4bdc-b815-1e28178fd08c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deepexi-app: devops-front-global
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2020-09-10T12:28:28Z"
        field.cattle.io/ports: '[[{"containerPort":8080,"dnsName":"devops-front-global","hostPort":0,"kind":"ClusterIP","name":"port-tcp-8080","protocol":"TCP","sourcePort":0}]]'
      creationTimestamp: null
      labels:
        deepexi-app: devops-front-global
    spec:
      containers:
      - env:
        - name: POD_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: 172.16.96.87:8443/deepexi-devops-ci-service/dev-devops/devops-front-global:devops-front-global-develop-20200904105309-1761
        imagePullPolicy: IfNotPresent
        name: devops-front-global
        ports:
        - containerPort: 8080
          name: port-tcp-8080
          protocol: TCP
        resources:
          limits:
            cpu: 1m
            memory: 1Mi
          requests:
            cpu: 1m
            memory: 1Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registry-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2020-09-04T02:54:26Z"
    lastUpdateTime: "2020-09-04T02:54:26Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2020-09-10T12:17:09Z"
    lastUpdateTime: "2020-09-10T12:28:29Z"
    message: ReplicaSet "devops-front-global-cf954b69f" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 2
  replicas: 2
  unavailableReplicas: 2
  updatedReplicas: 1
