testprometheusceph.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: ceph
  name: ceph
  namespace: kube-system
spec:
  clusterIP: None
  ports:
  - name: http-metrics
    port: 9283
    protocol: TCP
    targetPort: 9283
  sessionAffinity: None
  type: ClusterIP


---

apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: ceph
  name: ceph
  namespace: kube-system
subsets:
- addresses:
  - ip: 10.83.75.6
  ports:
  - name: http-metrics
    port: 9283
    protocol: TCP
