testk8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginxdemo
  labels:
    app: nginxdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxdemo
  template:
    metadata:
      labels:
        app: nginxdemo
    spec:
      containers:
      - name: nginxdemo
        image: harbor.k8s.maimaiti.site/library/nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
        volumeMounts:
        - name: host-time
          mountPath: /etc/localtime
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 30"]
      volumes:
      - name: host-time
        hostPath:
          path: /etc/localtime

---

apiVersion: v1
kind: Service
metadata:
  name: nginxdemo
  labels:
    app: nginxdemo
spec:
  selector:
    app: nginxdemo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxdemo
  labels:
    app: nginxdemo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginxdemo.k8s.maimaiti.site
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxdemo
          servicePort: 80
